--- a/src/App.css
+++ b/src/App.css
@@ -81,15 +81,19 @@ background-color:seashell;
   display:"flex";
 }
 
+
+
+
 .footer {
   height: 45px;
   background-color: #00BCEB;
-  /* position: fixed; */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 30px;
-  margin-top: 200px;
 }
 
 .footer_text {
